[gd_scene load_steps=14 format=3 uid="uid://bn7bn7wn484nj"]

[ext_resource type="Script" path="res://scenes/day_end/day_end.gd" id="1_lxnyy"]
[ext_resource type="Shader" path="res://background.gdshader" id="1_rtllp"]
[ext_resource type="Shader" path="res://crt.gdshader" id="2_8u4wk"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wxm7h"]
shader = ExtResource("1_rtllp")
shader_parameter/color = Color(0.136255, 0.21, 0.1071, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_e5r6y"]
shader = ExtResource("2_8u4wk")
shader_parameter/overlay = true
shader_parameter/scanlines_opacity = 0.0
shader_parameter/scanlines_width = 0.0
shader_parameter/grille_opacity = 0.0
shader_parameter/resolution = Vector2(640, 480)
shader_parameter/pixelate = false
shader_parameter/roll = true
shader_parameter/roll_speed = 0.0
shader_parameter/roll_size = 0.0
shader_parameter/roll_variation = 1.09
shader_parameter/distort_intensity = 0.05
shader_parameter/noise_opacity = 0.0
shader_parameter/noise_speed = 5.0
shader_parameter/static_noise_intensity = 0.06
shader_parameter/aberration = 0.03
shader_parameter/brightness = 1.4
shader_parameter/discolor = false
shader_parameter/warp_amount = 1.0
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.2
shader_parameter/vignette_opacity = 0.646

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ybehd"]
bg_color = Color(0.140625, 0.140625, 0.140625, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_krxd2"]
bg_color = Color(0.448654, 0.949219, 0.925755, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0nbmw"]
bg_color = Color(0.0898438, 0.0898438, 0.0898438, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 10
shadow_offset = Vector2(0, 4)

[sub_resource type="Curve" id="Curve_b0gwa"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_ids3t"]
curve = SubResource("Curve_b0gwa")

[sub_resource type="Curve" id="Curve_vnsnd"]
_data = [Vector2(0, 0.371134), 0.0, 0.0, 0, 0, Vector2(0.0625, 0.556701), 0.0, 0.0, 0, 0, Vector2(0.3125, 0.247423), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_g6dv1"]
curve = SubResource("Curve_vnsnd")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ufem7"]
particle_flag_disable_z = true
angle_min = -60.6
angle_max = 83.4
direction = Vector3(0, -1, 0)
spread = 61.18
initial_velocity_min = 200.0
initial_velocity_max = 280.0
gravity = Vector3(0, 500, 0)
scale_min = 16.79
scale_max = 16.79
scale_curve = SubResource("CurveTexture_g6dv1")
alpha_curve = SubResource("CurveTexture_ids3t")

[node name="DayEnd" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lxnyy")

[node name="SolidBackground" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.177758, 0.273438, 0.138855, 1)
metadata/_edit_lock_ = true

[node name="Shader" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_wxm7h")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.177758, 0.273438, 0.138855, 1)
metadata/_edit_lock_ = true

[node name="CRTShader" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_e5r6y")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)
metadata/_edit_lock_ = true

[node name="Label" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 480.0
offset_top = 232.0
offset_right = 800.0
offset_bottom = 256.0
bbcode_enabled = true
text = "[wave][center]Progresso no projeto da empresa[wave]"

[node name="ProjectProgress" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -275.0
offset_top = 264.0
offset_right = 285.0
offset_bottom = 291.0
grow_horizontal = 2
theme_override_styles/background = SubResource("StyleBoxFlat_ybehd")
theme_override_styles/fill = SubResource("StyleBoxFlat_krxd2")
value = 16.98

[node name="InitNextDay" type="Button" parent="."]
layout_mode = 0
offset_left = 560.0
offset_top = 512.0
offset_right = 720.0
offset_bottom = 576.0
text = "Iniciar proximo dia"

[node name="RemainingDays" type="Label" parent="."]
layout_mode = 0
offset_left = 560.0
offset_top = 480.0
offset_right = 720.0
offset_bottom = 503.0
text = "Dias Restantes: 99"
horizontal_alignment = 1

[node name="GameLostModal" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -243.0
offset_top = 424.0
offset_right = 269.0
offset_bottom = 696.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0nbmw")

[node name="Title" type="Label" parent="GameLostModal"]
modulate = Color(1, 0.00390625, 0.00390625, 1)
layout_mode = 2
offset_left = 72.0
offset_top = 24.0
offset_right = 440.0
offset_bottom = 47.0
text = "Você foi DEMITIDO"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Desc1" type="Label" parent="GameLostModal"]
layout_mode = 2
offset_left = 34.0
offset_top = 80.0
offset_right = 488.0
offset_bottom = 128.0
text = "Um de seus funcionários teve um burnout."
horizontal_alignment = 1
autowrap_mode = 2

[node name="Desc2" type="Label" parent="GameLostModal"]
layout_mode = 2
offset_left = 8.0
offset_top = 144.0
offset_right = 504.0
offset_bottom = 201.0
text = "Um processo foi aberto contra a empresa e você foi demitido."
horizontal_alignment = 1
autowrap_mode = 2

[node name="BackToMenu" type="Button" parent="GameLostModal"]
layout_mode = 2
offset_left = 192.0
offset_top = 224.0
offset_right = 332.0
offset_bottom = 255.0
text = "Sair para o menu"

[node name="ExplosionGravity" type="GPUParticles2D" parent="."]
position = Vector2(640, 496)
emitting = false
amount = 32
process_material = SubResource("ParticleProcessMaterial_ufem7")
one_shot = true
explosiveness = 1.0

[connection signal="pressed" from="InitNextDay" to="." method="_on_init_next_day_pressed"]
[connection signal="pressed" from="GameLostModal/BackToMenu" to="." method="_on_back_to_menu_pressed"]
